k8s/local/pocketbase/pocketbase-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketbase-cluster-ip-service
  namespace: multitool-local
spec:
  type: ClusterIP
  selector:
    component: pocketbase
  ports:
    - port: 8090
      targetPort: 8090
